--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <script>
 
+	console.log(navigator.userAgentData.mobile)
+
 var scene, camera, renderer, clock, deltaTime, totalTime;
 
 var arToolkitSource, arToolkitContext;
