--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<title>Ar test</title>
-	<script src='js/three.js'></script>
-	<script src="jsartoolkit5/artoolkit.min.js"></script>
-	<script src="jsartoolkit5/artoolkit.api.js"></script>
-	<script src="threex/threex-artoolkitsource.js"></script>
-	<script src="threex/threex-artoolkitcontext.js"></script>
-	<script src="threex/threex-arbasecontrols.js"></script>
-	<script src="threex/threex-armarkercontrols.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js'></script>
+	<script src="https://cdn.jsdelivr.net/npm/artoolkit5@5.3.2/dist/artoolkit.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/artoolkit5@5.3.2/dist/artoolkit.api.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/threex.dynamsoft@2.0.10/dist/threex-artoolkitsource.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/threex.dynamsoft@2.0.10/dist/threex-artoolkitcontext.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/threex.dynamsoft@2.0.10/dist/threex-arbasecontrols.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/threex.dynamsoft@2.0.10/dist/threex-armarkercontrols.js"></script>
 </head>
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
@@ -19,7 +19,7 @@
 
 <script>
 
-	console.log(navigator.userAgentData.mobile)
+
 
 var scene, camera, renderer, clock, deltaTime, totalTime;
 
