--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			markerRoot1 = new THREE.Group();
 			scene.add(markerRoot1);
 			let markerControls1 = new THREEx.ArMarkerControls(arToolkitContext, markerRoot1, {
-				type: 'pattern', patternUrl: "assets/appello.patt",
+				type: 'pattern', patternUrl: "data/hiro.patt",
 			})
 
 			let geometry1 = new THREE.PlaneBufferGeometry(2, 2, 4, 4);
