--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			let geometry1 = new THREE.PlaneBufferGeometry(2, 2, 4, 4);
 
 			let video = document.getElementById('video');
-			vide.play();
+			video.play();
 			let texture = new THREE.VideoTexture(video);
 			texture.minFilter = THREE.LinearFilter;
 			texture.magFilter = THREE.LinearFilter;
