--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 			texture.minFilter = THREE.LinearFilter;
 			texture.magFilter = THREE.LinearFilter;
 			texture.format = THREE.RGBFormat;
+			texture.needsUpdate = true;
 			let material1 = new THREE.MeshBasicMaterial({ map: texture });
 
 			mesh1 = new THREE.Mesh(geometry1, material1);
