--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 <script type="importmap">
 	{
 		"imports": {
-			"three": "../build/three.module.js",
-			"three/addons/": "./jsm/"
+			"three": "../build/three.module.js"
 		}
 	}
 </script>
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-	<video id="video" autoplay loop crossOrigin="anonymous" playsinline webkit-playsinline style="display:none">
+	<video id="video" autoplay loop crossOrigin="anonymous" playsinline style="display:none">
 		<source src="video/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
 		<source src="video/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 	</video>
@@ -65,8 +64,6 @@
 			clock = new THREE.Clock();
 			deltaTime = 0;
 			totalTime = 0;
-
-
 
 			////////////////////////////////////////////////////////////
 			// setup arToolkitSource
@@ -122,7 +119,6 @@
 			let geometry1 = new THREE.PlaneGeometry(2, 2, 4, 4);
 
 			let video = document.getElementById('video');
-			video.play();
 			let texture = new THREE.VideoTexture(video);
 
 			texture.minFilter = THREE.LinearFilter;
