--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <head>
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -12,23 +12,15 @@
 	<script src="threex/threex-armarkercontrols.js"></script>
 </head>
 
-<script type="importmap">
-	{
-		"imports": {
-			"three": "../build/three.module.js"
-		}
-	}
-</script>
-
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-	<video id="video" autoplay loop crossOrigin="anonymous" playsinline style="display:none">
+	<video id="video" autoplay loop crossOrigin="anonymous" playsinline webkit-playsinline style="display:none">
 		<source src="video/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
 		<source src="video/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 	</video>
 
-	<script type="module">
-		import * as THREE from 'three';
+	<script>
+
 		var scene, camera, renderer, clock, deltaTime, totalTime;
 
 		var arToolkitSource, arToolkitContext;
@@ -43,9 +35,8 @@
 		function initialize() {
 			scene = new THREE.Scene();
 
-			const light = new THREE.DirectionalLight(0xffffff, 3);
-			light.position.set(0.5, 1, 1).normalize();
-			scene.add(light);
+			let ambientLight = new THREE.AmbientLight(0xcccccc, 0.5);
+			scene.add(ambientLight);
 
 			camera = new THREE.Camera();
 			scene.add(camera);
@@ -116,16 +107,17 @@
 				type: 'pattern', patternUrl: "data/hiro.patt",
 			})
 
-			let geometry1 = new THREE.PlaneGeometry(2, 2, 4, 4);
+			let geometry1 = new THREE.PlaneBufferGeometry(2, 2, 4, 4);
 
 			let video = document.getElementById('video');
+			video.play();
 			let texture = new THREE.VideoTexture(video);
 
 			texture.minFilter = THREE.LinearFilter;
 			texture.magFilter = THREE.LinearFilter;
 			texture.format = THREE.RGBFormat;
 			texture.needsUpdate = true;
-			let material1 = new THREE.MeshBasicMaterial({ color: 0xffffff, map: texture });
+			let material1 = new THREE.MeshBasicMaterial({ map: texture });
 
 			mesh1 = new THREE.Mesh(geometry1, material1);
 			mesh1.rotation.x = -Math.PI / 2;
@@ -156,6 +148,31 @@
 
 	</script>
 
+</body>
+
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<!-- include A-Frame obviously -->
+<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+<!-- include ar.js for A-Frame -->
+<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+
+<body style='margin : 0px; overflow: hidden;'>
+	<a-scene embedded arjs>
+		<!-- create your content here. just a box for now -->
+		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+		<!-- define a camera which will move according to the marker position -->
+		<a-marker-camera preset='hiro'></a-marker-camera>
+	</a-scene>
 </body>
 
 </html>
