--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
 		<a-assets>
 			<video id="penguin-sledding" autoplay loop="true" src="video/sintel.mp4"></video>
 		</a-assets>
+
+		<a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 
