--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 	<a-scene embedded arjs>
 		<a-assets>
-			<video id="penguin-sledding" autoplay loop="true" src="video/sintel.mp4"></video>
+			<video id="penguin-sledding" playsinline autoplay loop="true" src="video/sintel.mp4"></video>
 		</a-assets>
 
 		<a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
