--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
 
 	<a-scene embedded arjs>
 		<a-assets>
-			<video id="penguin-sledding" playsinline autoplay loop="true" src="video/sintel.mp4"></video>
+			<video id="penguin-sledding" autoplay loop="true" src="video/sintel.mp4"></video>
 		</a-assets>
 
-		<a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
+		<a-video src="#penguin-sledding" width="16" height="9" position="0 0.5 0"></a-video>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 
