--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 
+	<script>
+		window.addEventListener('click', function () {
+			document.getElementById('video').play();
+		});
+	</script>
 </body>
 
 </html>
