--- a/index.html
+++ b/index.html
@@ -166,23 +166,21 @@
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 
 <body style='margin : 0px; overflow: hidden;'>
-
+	<a-assets>
+		<video id="penguin-sledding" autoplay loop="true" muted="true"
+			src="https://archive.org/download/SampleVideo1280x7205mb/SampleVideo_1280x720_5mb.mp4"></video>
+	</a-assets>
 	<a-scene embedded arjs>
-		<a-video src="video/sintel.webm"></a-video>
-		<a-marker-camera preset='hiro'></a-marker-camera>
+		<a-marker preset="hiro">
+			<a-video src="#penguin-sledding" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
+		</a-marker>
+		<a-entity camera></a-entity>
 	</a-scene>
 
 	<script>
-		let played = false;
-
 		window.addEventListener('click', function () {
-			if (played) {
-				document.querySelector('video').pause();
-				played = false;
-			}
-
-			document.querySelector('video').play();
-			played = true;
+			var v = document.querySelector('#penguin-sledding');
+			v.play();
 		});
 	</script>
 </body>
