--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
 	<a-assets>
-		<video id="penguin-sledding" autoplay loop="true" muted="true"
-			src="https://archive.org/download/SampleVideo1280x7205mb/SampleVideo_1280x720_5mb.mp4"></video>
+		<video id="penguin-sledding" autoplay loop="true" muted="true" src="video/sintel.mp4"></video>
 	</a-assets>
 	<a-scene embedded arjs>
 		<a-marker preset="hiro">
