--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
 	</a-scene>
 
 	<script>
-		window.addEventListener('click', function () {
+		setTimeout(() => {
 			var v = document.querySelector('#penguin-sledding');
 			v.play();
-		});
+		}, 100)
 	</script>
 </body>
 
