--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
 <script defer src="index.js"></script>
 
-<body style='overflow: hidden; position: absolute; inset: 0'>
+<body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 		<a-assets>
 			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"
