--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"
 				style="visibility: hidden;"></video>
 		</a-assets>
-		<a-marker type='pattern' url='assets/appello.patt'>
+		<a-marker preset="custom" type='pattern' url='assets/appello.patt'>
 			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
