--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"
 				style="visibility: hidden;"></video>
 		</a-assets>
-		<a-marker preset='hiro' type='pattern' threshold='0.5' url='assets/appello.patt'>
+		<a-marker-camera preset='hiro' type='pattern' threshold='0.5' url='assets/hiro.patt'>
 			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
-		</a-marker>
+		</a-marker-camera>
 		<a-entity camera></a-entity>
 	</a-scene>
 
