--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
 		<a-assets>
-			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"
+			<video id="video" autoplay style="display: none;" loop="true" muted="true" src="video/sintel.mp4"
 				style="visibility: hidden;"></video>
 		</a-assets>
 		<a-marker-camera preset='custom' type='pattern' url='assets/appello.patt'>
