--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<video id="video" autoplay style="display: none;" loop="true" muted="true" src="video/sintel.mp4"
 				style="visibility: hidden;"></video>
 		</a-assets>
-		<a-marker-camera preset='custom' type='pattern' url='assets/appello.patt'>
-			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
+		<a-marker-camera preset='custom' type='pattern' url='assets/appello2.patt'>
+			<a-video src="#video" position="0 0.2 0" rotation="270 0 0" play="true"></a-video>
 		</a-marker-camera>
 		<a-entity camera></a-entity>
 	</a-scene>
