--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<video id="video" autoplay style="display: none;" loop="true" muted="true" src="video/sintel.mp4"
 				style="visibility: hidden; display: none;"></video>
 		</a-assets>
-		<a-marker-camera preset='custom' type='pattern' url='assets/appello.patt'>
+		<a-marker-camera preset='hiro' type='pattern' url='assets/appello.patt'>
 			<a-video src="#video" position="0 0.1 0" width="5" height="5" rotation="270 0 0" play="true"></a-video>
 		</a-marker-camera>
 		<a-entity camera></a-entity>
