--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<video id="video" autoplay style="display: none;" loop="true" muted="true" src="video/sintel.mp4"
 				style="visibility: hidden; display: none;"></video>
 		</a-assets>
-		<a-marker-camera preset='custom' type='pattern' url='assets/appello.patt'>
+		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
 			<a-video src="#video" position="0 0 0" rotation="270 0 0" play="true"></a-video>
-		</a-marker-camera>
+		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
 
