--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
 		<a-assets>
-			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"></video>
+			<video id="video" autoplay style="display: none;" loop="true" muted="true" src="video/sintel.mp4"
+				style="visibility: hidden; display: none;"></video>
 		</a-assets>
 		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
-			<a-entity>
-				<a-plane src="#video" position="0 0.5 0" rotation="270 0 0" scale="2 1 1"></a-plane>
-			</a-entity>
+			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
-
 
 </body>
 
