--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 		<a-assets>
 			<video id="video" autoplay loop muted src="video/sintel.mp4"></video>
 		</a-assets>
-		<a-camera></a-camera>
-		<a-plane src="#video" rotation="270 0 0" scale="2 1 1" position="0 0 -1" look-at="[camera]"></a-plane>
+		<a-entity camera></a-entity>
+		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
+			<a-video src="#video" position="0 0 0" rotation="270 0 0" play="true" scale="2 1 1"></a-video>
+		</a-marker>
 	</a-scene>
 </body>
 
