--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 
 </head>
 
+
+
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='debugUIEnabled: false;'>
 		<a-assets>
 			<video id="video" autoplay loop muted src="video/sintel.mp4"></video>
 		</a-assets>
-		<a-entity camera></a-entity>
+		<a-entity id="camera" camera></a-entity>
 		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
-			<a-video src="#video" position="0 0 0" rotation="270 0 0" play="true" scale="2 1 1"></a-video>
+			<a-entity>
+				<a-plane src="#video" rotation="270 0 0" scale="2 1 1" position="0 0 0" look-at="#camera"></a-plane>
+			</a-entity>
 		</a-marker>
 	</a-scene>
 </body>
