--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-	<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
-	<script defer src="index.js"></script>
-
 </head>
 
+<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
+<script defer src="index.js"></script>
+
 <body style='overflow: hidden; margin: 0;'>
-	<a-scene embedded arjs='debugUIEnabled: false;'>
+	<a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
 		<a-assets>
-			<video id="video" autoplay loop muted src="video/sintel.mp4"></video>
+			<video id="video" autoplay loop="true" muted="true" play src="video/sintel.mp4"
+				style="visibility: hidden;"></video>
 		</a-assets>
-		<a-entity id="camera" camera></a-entity>
 		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
-			<a-plane src="#video" rotation="270 0 0" scale="2 1 1" position="0 0 0" look-at="#camera"></a-plane>
+			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
 		</a-marker>
+		<a-entity camera></a-entity>
 	</a-scene>
+
 </body>
 
 </html>
