--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
 <script defer src="index.js"></script>
 
-<body style='overflow: hidden; margin: 0;'>
-	<a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
+<body style='overflow: hidden; margin: 0; width: 100%; height: 100%'>
+	<a-scene embedded arjs='debugUIEnabled: false;'>
 		<a-assets>
 			<video id="video" autoplay loop="true" muted="true" play src="video/sintel.mp4"
 				style="visibility: hidden;"></video>
@@ -20,7 +20,7 @@
 		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
 			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
 		</a-marker>
-		<a-entity camera></a-entity>
+		<a-entity style="width: 100%; height: 100%" camera></a-entity>
 	</a-scene>
 
 </body>
