--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 </head>
 
-<script src="https://aframe.io/releases/latest/aframe.min.js"></script>
+<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/latest/aframe/build/aframe-ar.js"></script>
 <script defer src="index.js"></script>
 
