--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
 
 </body> -->
 
-<body>
-	<a-scene embedded arjs="source: webcam; debugUIEnabled: false;">
-		<a-camera position="0 0 0" rotation="0 0 0"></a-camera>
-		<a-entity position="0 0 -1" rotation="0 0 0" scale="2 1 1">
-			<a-video src="video/sintel.mp4" autoplay="true" loop="true" id="video"></a-video>
-		</a-entity>
+<body style='overflow: hidden; margin: 0;'>
+	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+		<a-assets>
+			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"
+				style="visibility: hidden;"></video>
+		</a-assets>
+		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
+			<a-video src="#video" position="0 0 0" rotation="270 0 0" play="true"></a-video>
+		</a-marker>
+		<a-entity camera></a-entity>
 	</a-scene>
+
 </body>
 
 </html>
