--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 		<a-assets>
-			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"
-				style="visibility: hidden;"></video>
+			<video id="video" autoplay loop muted play src="video/sintel.mp4" style="visibility: hidden;"></video>
 		</a-assets>
 		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
 			<a-video src="#video" position="0 0 0" rotation="270 0 0" play="true"></a-video>
