--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/latest/aframe/build/aframe-ar.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
 <script defer src="index.js"></script>
 
 <body style='overflow: hidden; margin: 0;'>
