--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 </head>
+
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
 <script defer src="index.js"></script>
 
 <body style='overflow: hidden; margin: 0;'>
-	<a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3; debugUIEnabled: false;'>
+	<a-scene embedded arjs='debugUIEnabled: false;'>
 		<a-assets>
-			<video id="video" autoplay style="display: none;" loop="true" muted="true" src="video/sintel.mp4"
-				style="visibility: hidden; display: none;"></video>
+			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"></video>
 		</a-assets>
 		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
-			<a-video src="#video" position="0 0 0" rotation="270 0 0" play="true" scale="2 1 1"></a-video>
+			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
+
 </body>
 
 </html>
