--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='debugUIEnabled: false;'>
 		<a-assets>
-			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"></video>
+			<video id="video" autoplay loop="true" muted="true" play="true" src="video/sintel.mp4"></video>
 		</a-assets>
-		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
-			<a-video src="#video" position="0 0 0" rotation="270 0 0" scale="2 1 1" play="true"></a-video>
+		<a-marker preset='custom' type='pattern' url='assets/appello.patt' smooth>
+			<a-entity>
+				<a-video src="#video" position="0 0 0" rotation="270 0 0" scale="2 1 1" play="true"></a-video>
+			</a-entity>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
