--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script defer src="index.js"></script>
 
 <body style='overflow: hidden; margin: 0;'>
-	<a-scene embedded arjs='debugUIEnabled: false;'>
+	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 		<a-assets>
 			<video id="video" autoplay loop="true" muted="true" play="true" src="video/sintel.mp4"></video>
 		</a-assets>
@@ -23,6 +23,7 @@
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
+	<p>version: 1</p>
 
 </body>
 
