--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<a-assets>
 			<video id="video" autoplay loop="true" muted="true" play="true" src="video/sintel.mp4"></video>
 		</a-assets>
-		<a-marker preset='custom' type='pattern' url='assets/appello.patt' smooth>
+		<a-marker-camera type='pattern' url='assets/appello.patt' smooth>
 			<a-entity>
 				<a-video src="#video" position="0 0 0" rotation="270 0 0" scale="2 1 1" play="true"></a-video>
 			</a-entity>
-		</a-marker>
+		</a-marker-camera>
 		<a-entity camera></a-entity>
 	</a-scene>
 	<p>version: 1</p>
