--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 		<a-assets>
+			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"
+				style="visibility: hidden;"></video>
+		</a-assets>
+		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
+			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
+		</a-marker>
+		<a-entity camera></a-entity>
+	</a-scene>
+
+</body>
+
+</html>
+
+
+<!-- <body style='overflow: hidden; margin: 0;'>
+	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+		<a-assets>
 			<video id="video" autoplay loop="true" muted="true" play="true" src="video/sintel.mp4"></video>
 		</a-assets>
 		<a-marker type='pattern' url='assets/appello.patt' smooth>
@@ -22,6 +39,4 @@
 		<a-entity camera></a-entity>
 	</a-scene>
 
-</body>
-
-</html>
+</body> -->
