--- a/index.html
+++ b/index.html
@@ -12,13 +12,9 @@
 <script defer src="index.js"></script>
 
 <body style='overflow: hidden; margin: 0;'>
-	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
-		<a-assets>
-			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"
-				style="visibility: hidden;"></video>
-		</a-assets>
+	<a-scene embedded arjs>
 		<a-marker preset="hiro">
-			<a-video src="#video" position="0 1 0" rotation="270 0 0" play="true"></a-video>
+			<a-video position='0 0.1 0' rotation='270 0 0' scale='1 0.5 1' src='video/sintel.mp4'></a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
