--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<video id="video" autoplay loop muted src="video/sintel.mp4"></video>
 		</a-assets>
 		<a-marker preset="hiro">
+			<a-video position='0 0.1 0' rotation='270 0 0' scale='1 0.5 1' play src="video/sintel.mp4"></a-video>
 			<!-- <a-video position='0 0.1 0' rotation='270 0 0' scale='1 0.5 1' play src="#video"></a-video> -->
-			<a-video position='0 0.1 0' rotation='270 0 0' scale='1 0.5 1' play src="#video"></a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
