--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
 <script defer src="index.js"></script>
 
+
 <body style='overflow: hidden; margin: 0;'>
-	<a-scene embedded arjs>
-		<a-marker preset="hiro">
-			<a-video position='0 0.1 0' rotation='270 0 0' scale='1 0.5 1' play="true" src="#video"></a-video>
+	<a-assets>
+		<video id="video" autoplay loop="true" muted="true" play="true" src="video/sintel.mp4"></video>
+	</a-assets>
+	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+		<a-marker type='pattern' url='assets/appello.patt' smooth>
+			<a-video src="#video" position="0 0.5 0" rotation="0 0 0" play="true"></a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
-
-
 
 </body>
 
