--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 
 
 <body style='overflow: hidden; margin: 0;'>
-	<a-assets>
-		<video id="video" autoplay loop="true" muted="true" play="true" src="video/sintel.mp4"></video>
-	</a-assets>
+
 	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 		<a-marker type='pattern' url='assets/appello.patt' smooth>
-			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
+			<a-video src="#video" position="0 0.5 0" rotation="270 0 0" play="true" src="video/sintel.mp4"></a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
