--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <script defer src="index.js"></script>
 
 <body style='overflow: hidden; margin: 0;'>
+	<video id="video" autoplay loop="true" src="video/sintel.mp4" style="display: none;"></video>
 	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
 		<a-marker type='pattern' url='assets/appello.patt' smooth>
-			<a-video position="0 0.1 0" mute="false" rotation="270 0 0" scale="2 1 1" play="true"
-				src="video/sintel.mp4"></a-video>
+			<a-video src="#video" position="0 0.1 0" rotation="270 0 0" scale="2 1 1" play="true"></a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
