--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <script defer src="index.js"></script>
 
 <body style='overflow: hidden; margin: 0;'>
-	<video id="video" autoplay loop="true" src="video/sintel.mp4" style="display: none;"></video>
 	<a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
+		<a-assets>
+			<video id="video" autoplay loop="true" src="video/sintel.mp4" play="true" style="display: none;"></video>
+		</a-assets>
 		<a-marker type='pattern' url='assets/appello.patt' smooth>
 			<a-video src="#video" position="0 0.1 0" rotation="270 0 0" scale="2 1 1" play="true"></a-video>
 		</a-marker>
