--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='debugUIEnabled: false;'>
 		<a-assets>
-			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4"></video>
+			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4" style="display: none"></video>
 		</a-assets>
 		<a-marker preset='custom' type='pattern' url='assets/appello.patt'>
 			<a-plane src="#video" position="0 0 0" rotation="270 0 0" scale="2 1 1" play></a-plane>
