--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	<title>Document</title>
+	<title>Marker AI</title>
 </head>
 
 <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
