--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</a-marker>
 		<a-entity camera></a-entity>
 		<a-assets>
-			<video id="video" autoplay loop="true" muted="true" src="video/sintel.mp4" style="display: none"></video>
+			<video id="video" autoplay loop="true" muted="false" src="video/sintel.mp4" style="display: none"></video>
 		</a-assets>
 	</a-scene>
 </body>
