--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='debugUIEnabled: false;'>
-		<a-marker preset='custom' type='pattern' url='assets/test.patt'>
+		<a-marker preset='custom' type='pattern' url='assets/test.patt' smooth>
 			<a-plane src="#video" position="0 0.1 0" rotation="270 0 0" scale="2 1 1" play></a-plane>
 		</a-marker>
 		<a-entity camera></a-entity>
