--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='debugUIEnabled: false;'>
-		<a-marker preset='custom' type='pattern' url='assets/test.patt' smooth>
-			<a-plane src="#video" position="0 0.1 0" rotation="270 0 0" scale="2 1 1" play></a-plane>
+		<a-marker id="marker" preset='custom' type='pattern' url='assets/test.patt'>
+			<a-video src="#video" position="0 0.1 0" rotation="270 0 0" scale="2 1 1" play>
+				<a-entity look-at="target: #marker"></a-entity>
+			</a-video>
 		</a-marker>
 		<a-entity camera></a-entity>
 		<a-assets>
@@ -26,3 +28,17 @@
 </body>
 
 </html>
+
+
+
+<!-- <body style='overflow: hidden; margin: 0;'>
+	<a-scene embedded arjs='debugUIEnabled: false;'>
+		<a-marker preset='custom' type='pattern' url='assets/test.patt' smooth>
+			<a-plane src="#video" position="0 0.1 0" rotation="270 0 0" scale="2 1 1" play></a-plane>
+		</a-marker>
+		<a-entity camera></a-entity>
+		<a-assets>
+			<video id="video" autoplay loop="true" muted="false" src="video/sintel.mp4" style="display: none"></video>
+		</a-assets>
+	</a-scene>
+</body> -->
