--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <body style='overflow: hidden; margin: 0;'>
 	<a-scene embedded arjs='debugUIEnabled: false;'>
-		<a-marker id="marker" preset='custom' type='pattern' url='assets/test.patt'>
+		<a-marker id="marker" preset='custom' type='pattern' url='assets/test.patt' smoothCount="0.0001"
+			smoothTolerance="0.0001">
 			<a-video src="#video" position="0 0.1 0" rotation="270 0 0" scale="2 1 1" play>
 				<a-entity look-at="target: #marker"></a-entity>
 			</a-video>
