--- a/ui-test/spatial-ui/index.html
+++ b/ui-test/spatial-ui/index.html
@@ -14,7 +14,7 @@
 <script defer src="../../index.js"></script>
 
 <body style='overflow: hidden; margin: 0;'>
-  <a-scene embedded arjs='debugUIEnabled: false;'>
+  <a-scene arjs='debugUIEnabled: false;'>
 
     <a-video src="#video" position="0 1.7 -2" rotation="0 0 0" width=2 height=1 play>
     </a-video>
