--- a/ui-test/spatial-ui/index.html
+++ b/ui-test/spatial-ui/index.html
@@ -16,12 +16,11 @@
   <script src="../js/spatial-ui/spatial-close-button.js"></script>
   <script src="../js/spatial-ui/spatial-hero-image.js"></script>
   <script src="tile.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
   <script defer src="../../index.js"></script>
 </head>
 
 <body>
-  <a-scene arjs cursor="rayOrigin: mouse;" raycaster="objects: .tile, .start-button, .close-button" ui-controller>
+  <a-scene cursor="rayOrigin: mouse;" raycaster="objects: .tile, .start-button, .close-button" ui-controller>
     <a-assets>
       <a-mixin id="tile" tile="width: 0.400; height: 0.285"
         animation__scale="property: scale; to: 1.02 1.02 1.02; dur: 100; startEvents: mouseenter"
@@ -36,6 +35,8 @@
       <img id="hero-image" src="https://cdn.aframe.io/examples/spatial-input/hero-image.jpg" crossorigin="anonymous">
       <video id="video" autoplay loop="true" muted="false" src="../../video/Appello.mp4" style="display: none"></video>
     </a-assets>
+
+    <a-sky src="#leaving-room" rotation="0 -90 0"></a-sky>
 
 
 
