--- a/ui-test/spatial-ui/index.html
+++ b/ui-test/spatial-ui/index.html
@@ -33,7 +33,8 @@
       <img id="leaving-room" src="https://cdn.aframe.io/examples/spatial-input/leaving-room.jpg"
         crossorigin="anonymous">
       <img id="hero-image" src="https://cdn.aframe.io/examples/spatial-input/hero-image.jpg" crossorigin="anonymous">
-      <video id="video" autoplay loop="true" muted="false" src="../../video/Appello.mp4" style="display: none"></video>
+      <video id="video" autoplay loop="true" muted="false" playsinline play src="../../video/Appello.mp4"
+        style="display: none"></video>
     </a-assets>
 
     <a-sky src="#leaving-room" rotation="0 -90 0"></a-sky>
