--- a/ui-test/spatial-ui/index.html
+++ b/ui-test/spatial-ui/index.html
@@ -31,9 +31,8 @@
         animation__scale_reverse="property: object3D.position.z; to: 0; dur: 100; startEvents: focused">
       </a-mixin>
       <!-- <img id="leaving-room" src="https://cdn.aframe.io/examples/spatial-input/leaving-room.jpg" -->
-      <img id="leaving-room" src="https://cdn.aframe.io/examples/spatial-input/leaving-room.jpg"
-        crossorigin="anonymous">
-      <img id="hero-image" src="/assets/bg.svg" crossorigin="anonymous">
+      <img id="leaving-room" src="../../assets/15.jpg" crossorigin="anonymous">
+      <img id="hero-image" src="../../assets/bg.svg" crossorigin="anonymous">
       <video id="video" autoplay loop="true" playsinline play src="../../video/Appello.mp4"
         style="display: none"></video>
     </a-assets>
