--- a/ui-test/spatial-ui/index.html
+++ b/ui-test/spatial-ui/index.html
@@ -107,7 +107,7 @@
     </a-entity>
 
     <a-entity position="1 1.7 -1.2" rotation="0 -45 0">
-      <a-video width=2 height="1" src="#video" rotation="0 0 0" play></a-video>
+      <a-video width=2 height="1" src="#video" rotation="0 0 0" play muted="false"></a-video>
     </a-entity>
 
     <a-entity position="0 1.6 0" look-controls camera>
