--- a/ui-test/spatial-ui/index.html
+++ b/ui-test/spatial-ui/index.html
@@ -33,7 +33,7 @@
       <!-- <img id="leaving-room" src="https://cdn.aframe.io/examples/spatial-input/leaving-room.jpg" -->
       <img id="leaving-room" src="../../assets/15.jpg" crossorigin="anonymous">
       <img id="hero-image" src="../../assets/bg.svg" crossorigin="anonymous">
-      <video id="video" autoplay loop="true" playsinline play src="../../video/Appello.mp4"
+      <video id="video" autoplay muted="muted" loop="true" playsinline play src="../../video/Appello.mp4"
         style="display: none"></video>
     </a-assets>
 
