--- a/ui-test/spatial-ui/index.html
+++ b/ui-test/spatial-ui/index.html
@@ -20,6 +20,20 @@
 </head>
 
 <body>
+  <div id="louncher" style="
+      position: absolute; 
+      inset: 0; 
+      background-color:white; 
+      z-index: 999999; 
+      width: 100%; 
+      height: 100%; 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      ">
+    <button id="lounch">Start</button>
+  </div>
+
   <a-scene cursor="rayOrigin: mouse;" raycaster="objects: .tile, .start-button, .close-button" ui-controller>
     <a-assets>
       <a-mixin id="tile" tile="width: 0.400; height: 0.285"
@@ -33,8 +47,7 @@
       <!-- <img id="leaving-room" src="https://cdn.aframe.io/examples/spatial-input/leaving-room.jpg" -->
       <img id="leaving-room" src="../../assets/15.jpg" crossorigin="anonymous">
       <img id="hero-image" src="../../assets/bg.svg" crossorigin="anonymous">
-      <video id="video" autoplay muted="muted" loop="true" playsinline play src="../../video/Appello.mp4"
-        style="display: none"></video>
+      <video id="video" loop="true" playsinline src="../../video/Appello.mp4" style="display: none"></video>
     </a-assets>
 
     <a-sky src="#leaving-room" rotation="0 -90 0"></a-sky>
@@ -107,7 +120,7 @@
     </a-entity>
 
     <a-entity position="1 1.7 -1.2" rotation="0 -45 0">
-      <a-video width=2 height="1" src="#video" rotation="0 0 0" play muted="false"></a-video>
+      <a-video width=2 height="1" src="#video" rotation="0 0 0" play></a-video>
     </a-entity>
 
     <a-entity position="0 1.6 0" look-controls camera>
