--- a/ui-test/spatial-ui/index.html
+++ b/ui-test/spatial-ui/index.html
@@ -123,7 +123,7 @@
       <a-video width=2 height="1" src="#video" rotation="0 0 0" play></a-video>
     </a-entity>
 
-    <a-entity position="0 1.6 0" look-controls camera>
+    <a-entity position="0 1.6 0" camera>
       <a-entity class="camera-cursor" raycaster="objects: .tile, .start-button, .close-button" cursor
         geometry="primitive: circle; radius: 0.005" material="color: #112431; shader: flat"
         position="0 0 -0.75"></a-entity>
