--- a/index2.html
+++ b/index2.html
@@ -1,27 +1,29 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-	<script defer src="index.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<title>Fake AR</title>
 </head>
 
-<body>
-	<a-scene mindar-image="imageTargetSrc: ./assets/targets.mind" color-space="sRGB"
-		renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-		device-orientation-permission-ui="enabled: false">
+<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
+
+<script defer src="index.js"></script>
+
+<body style='overflow: hidden; margin: 0;'>
+	<a-scene embedded arjs='debugUIEnabled: false;'>
+
+		<a-video src="#video" position="0 1.7 -1" rotation="0 0 0" scale="0.5 0.25 0.25" play>
+
+		</a-video>
+
+
 		<a-assets>
-			<video id="video" autoplay loop="true" muted="false" src="video/sintel.mp4" style="display: none"></video>
+			<video id="video" autoplay loop="true" muted="false" src="video/Appello.mp4" style="display: none"></video>
 		</a-assets>
-
-		<a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-		<a-entity mindar-image-target="targetIndex: 0">
-			<a-video src="#video" position="0 0.1 0" rotation="0 0 0" scale="2 1 1" play>
-				<a-entity look-at="target: #marker"></a-entity>
-			</a-video>
-		</a-entity>
-
 	</a-scene>
 </body>
 
