--- a/index2.html
+++ b/index2.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<title>Fake AR</title>
+	<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 
-<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.7/aframe/build/aframe-ar.js"></script>
+<body>
+	<video id="video" autoplay style="
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		min-width: 100%;
+		min-height: 100%;
+		width: auto;
+		height: auto;
+		z-index: -100;
+		transform: translateX(-50%) translateY(-50%);
+		background: no-repeat;
+		background-size: cover;"></video>
+	<a-scene>
 
-<script defer src="index.js"></script>
+		<a-video src="#video" position="-1 1.7 -1.2" scale="0.5 0.25 0.25" play>
+			<a-entity look-at="target: #marker"></a-entity>
+		</a-video>
 
-<body style='overflow: hidden; margin: 0;'>
-	<a-scene embedded arjs='debugUIEnabled: false;'>
-
-		<a-entity position="0 1.7 -1" rotation="0 0 0" scale="0.5 0.25 0.25">
-			<a-video src="#video" play>
-
-			</a-video>
-		</a-entity>
 
 		<a-assets>
 			<video id="video" autoplay loop="true" muted="false" src="video/Appello.mp4" style="display: none"></video>
 		</a-assets>
+		<a-entity camera look-controls></a-entity>
 	</a-scene>
+
+	<script>
+		const video = document.querySelector('#video');
+		const constraints = { video: true };
+
+		navigator.mediaDevices.getUserMedia(constraints)
+			.then((stream) => {
+				video.srcObject = stream;
+				video.play();
+				const scene = document.querySelector('a-scene');
+				scene.addEventListener('loaded', () => {
+					scene.setAttribute('background', 'src: #video');
+				});
+			});
+	</script>
 </body>
 
 </html>
